--- a/SentimentAnalysis..ipynb
+++ b/SentimentAnalysis..ipynb
@@ -210,7 +210,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Term Frequency-Inverse Document Frequency (TF-IDF)"
+    "### Term Frequency-Inverse Document Frequency (TF-IDF)\n",
+    "\n",
+    "**Term Frequency-Inverse Document Frequency (TF-IDF)** is a technique used to evaluate the importance of a term in a document within a collection (corpus) of documents. It's calculated as the product of TF and IDF.\n",
+    "\n",
+    "**TF-IDF**(**t**,**d**,**D**)**=**TF**(**t**,**d**)**×**IDF**(**t**,**D**)\n",
+    "\n",
+    "* **Purpose** : Highlights terms that are important in a document but not necessarily common across all documents in the corpus.\n",
+    "* **Key Points** :\n",
+    "  * TF-IDF considers not only the frequency of a term in a document (TF) but also its rarity across all documents (IDF).\n",
+    "  * High TF-IDF values occur when a term has a high frequency within a specific document but is rare across other documents.\n",
+    "  * Common terms across documents receive lower TF-IDF scores, as they are less discriminative.\n",
+    "\n"
    ]
   },
   {
