--- a/SentimentAnalysis..ipynb
+++ b/SentimentAnalysis..ipynb
@@ -16,13 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "import re"
    ]
   },
   {
@@ -109,18 +111,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Preprocessing"
+    "### Data preprocessing\n",
+    "\n",
+    "1. #### Turn to lower cases and delete special characters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Getting rid of html tags\n",
-    "db[\"review\"] = db[\"review\"].apply(lambda x: x.replace(\"<br />\",\"\")) "
+    "def preprocessor(text):\n",
+    "    #Getting rid of html tags\n",
+    "    text = re.sub('<[^>]*>','',text)\n",
+    "    emoticons = re.findall('(?::|;|=) (?:-)?(?:\\) |\\(|D|P)',text)#We store the emoticons\n",
+    "    text = (re.sub('[\\W]+',' ',text.lower()) + ''.join(emoticons).replace('-',''))\n",
+    "\n",
+    "    return text"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more information regarding regular expresions, consult the following [link](https://developers.google.com/edu/python/regular-expressions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db['review'] = db['review'].apply(preprocessor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>one of the other reviewers has mentioned that ...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a wonderful little production the filming tech...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>i thought this was a wonderful way to spend ti...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>basically there s a family where a little boy ...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>petter mattei s love in the time of money is a...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review sentiment\n",
+       "0  one of the other reviewers has mentioned that ...  positive\n",
+       "1  a wonderful little production the filming tech...  positive\n",
+       "2  i thought this was a wonderful way to spend ti...  positive\n",
+       "3  basically there s a family where a little boy ...  negative\n",
+       "4  petter mattei s love in the time of money is a...  positive"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -221,15 +331,43 @@
     "  * TF-IDF considers not only the frequency of a term in a document (TF) but also its rarity across all documents (IDF).\n",
     "  * High TF-IDF values occur when a term has a high frequency within a specific document but is rare across other documents.\n",
     "  * Common terms across documents receive lower TF-IDF scores, as they are less discriminative.\n",
-    "\n"
+    "\n",
+    "In this context, $idf(t,d)$ is the inverse frequency of document and can be calculated with the following equation:\n",
+    "\n",
+    "$$\n",
+    "idf(t,d) = log\\frac{n_d}{1 + df(d,t)}\n",
+    "$$\n",
+    "\n",
+    "For this case, $n_d$ represents the total number of documents and $df(d,t)$ is the number of documents $d$ that contains the $t$ term.\n",
+    "\n",
+    "#### Case example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tfidf = TfidfTransformer(use_idf=True,norm='l2',smooth_idf=True)\n",
+    "np.set_printoptions(precision=2)\n",
+    "print(tfidf.fit_transform(count.fit_transform(docs))\n",
+    "    .toarray())"
+   ]
   },
   {
    "cell_type": "code",
