--- a/SentimentAnalysis..ipynb
+++ b/SentimentAnalysis..ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from nltk.stem.porter import PorterStemmer\n",
     "import re"
    ]
   },
@@ -113,7 +114,7 @@
    "source": [
     "### Data preprocessing\n",
     "\n",
-    "1. #### Turn to lower cases and delete special characters"
+    "#### 1. Turn to lower cases and delete special characters"
    ]
   },
   {
@@ -129,13 +130,6 @@
     "    text = (re.sub('[\\W]+',' ',text.lower()) + ''.join(emoticons).replace('-',''))\n",
     "\n",
     "    return text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For more information regarding regular expresions, consult the following [link](https://developers.google.com/edu/python/regular-expressions)"
    ]
   },
   {
@@ -223,6 +217,43 @@
    ],
    "source": [
     "db.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more information regarding regular expresions, consult the following [link](https://developers.google.com/edu/python/regular-expressions)\n",
+    "\n",
+    "### 2. Tokenization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenizer(text):\n",
+    "    return text.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  3. Tokenization and Stemming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "porter = PorterStemmer()\n",
+    "def tokenizer_porter(text):\n",
+    "    return [porter.stem(word) for word in text.split()]"
    ]
   },
   {
